tests/NormalTests/paczka1/small_fuzzy/50819644.err
Error in line 2: gHLFd S318 55,64
Error in line 3: SqugZsh S749 19,0
Error in line 6: S110 S110 60,3
Error in line 7: S110 S318 22,6
Error in line 1: gHLFd S110 66,3
